@@ -1,5 +1,15 @@
 1999-02-23  Ross Johnson  <rpj@ise.canberra.edu.au>
 
+	* Template.c: Revamp.
+
+	* condvar1.c: Add.
+
+	* condvar2.c: Add.
+
+	* various: Cosmetic changes.
+
+1999-02-23  Ross Johnson  <rpj@ise.canberra.edu.au>
+
 	* Makefile: Some refinement.
 
 	* *.c: More exhaustive checking through assertions; clean up;
